# tbp-cxr-outlier

./: .flake8  .pre-commit-config.yaml  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: docs.yml  main.yml
docs/: api.rst  commandline.rst  conf.py  development.rst  example.rst  index.rst  requirements.txt
notebooks/: CXR Outlier Detector Traning.ipynb  CXR Outlier Evaluation.ipynb  myshow.py
notebooks/models/: pca-2-05c.pkl  pca-2-06c.pkl  pca-2-07c.pkl  pca-2-10c.pkl
tbpcxr/: __init__.py  __main__.py  model.py  registration.py  utilities.py
tbpcxr/data/: __init__.py  pca-35-06c.pkl
tbpcxr/model/: pca-001.pkl  pca-35-06c.pkl
test/: test_model.py  test_tbpcxr.py
test/data/: cxr-test-06c.pkl
utils/: update-gh-pages.sh
